<resources>
    <string name="app_name">Rosangel Store</string>
    <string name="confirmar_pedido">Confirmar Pedido</string>
    <string name="crear_pedido">Crear Pedido</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="pedidos">Pedidos</string>
    <string name="crear_pedidos">Crear Pedidos</string>
    <string name="productos">Productos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="producto">Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="cliente">Cliente</string>
    <string name="tel_fono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="observaciones">Observaciones</string>
    <string name="realizando_pedido">Realizando Pedido</string>
    <string name="pedido_correcto">Pedido Correcto</string>
    <string name="pedido_incorrecto">Pedido Incorrecto</string>
    <string name="empleado">Empleado</string>
    <string name="inicio">Inicio</string>
    <string name="fin">Fin</string>
    <string name="no_pedidos">No tienes pedidos</string>
    <string name="consultar_pedidos">Consultar Pedidos</string>
    <string name="no_productos">No hay productos disponibles</string>
    <string name="filtro_busca">Descripcion, marca, id</string>
    <string name="seleccione_producto">Seleecciona producto</string>
    <string name="seleccione_cliente">Seleccione Cliente</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña:</string>
    <string name="ingresar">Ingresar</string>
    <string name="error_password">Usuario o contraseña incorrecta</string>
    <string name="error_servidor">Error con el servidor, revisa tu conexión a internet</string>
    <string name="iniciando">Ingresando...</string>
    <string name="user_logged">Nombre Usuario Loggeado</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="pedidos_realizados">Pedidos Realizados</string>
    <string name="total_ganancias">Total Ganancias</string>
    <string name="clientes">Clientes</string>
    <string name="empleados">Empleados</string>
    <string name="pedidos_totales">Pedidos Totales</string>
    <string name="pedidos_pendientes">Pedidos Pendientes</string>
    <string name="total_ventas">Total Ventas</string>
    <string name="menu_pedidos">Crear Pedido</string>
    <string name="menu_historial_pedidos">Historial de pedidos</string>
    <string name="vendedor">Vendedor</string>
    <string name="eliminar">Eliminar</string>
    <string name="texto">Texto de prueba</string>

    <array name="pantallas">
        <item>Rosangel</item>
        <item>Enviados</item>
        <item>Rosangel</item>
    </array>
</resources>
