<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAppBackDark"
    tools:context=".app.UI.MainActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cont_tool"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/error" />

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/user_logged"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_light"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:id="@+id/btnCrear"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/bk_boton_main_menu"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="15dp"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_add"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/crear_pedido"
                android:textSize="30sp"
                android:textColor="@color/colorTextDark"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnPedidos"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/bk_boton_main_menu"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="15dp"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:src="@drawable/supermarket"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/pedidos"
                android:textSize="30sp"
                android:textColor="@color/colorTextDark"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnProductos"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/bk_boton_main_menu"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="15dp"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:src="@drawable/checklist"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/productos"
                android:textSize="30sp"
                android:textColor="@color/colorTextDark"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>