<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorAppBack"
    >


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rosangel"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/editUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:hint="@string/usuario"
        android:drawableLeft="@drawable/ic_person"
        android:textColorHint="@color/colorDarkGrey"
        android:textColor="@color/colorDarkGrey"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock"
        android:textColorHint="@color/colorDarkGrey"
        android:textColor="@color/colorDarkGrey"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:password="true"
        />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/bk_boton_ingresar"
        android:text="@string/ingresar"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_light"
            />
        <TextView
            android:id="@+id/textRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/roboto_light"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:id="@+id/textRecuperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            />
    </LinearLayout>
</LinearLayout>