<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackConsultar"
    >
    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cont_tool"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/btnInicio"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/inicio"
                android:textAlignment="center"
                android:background="@drawable/bk_line_grey_fill"
                android:textSize="20sp"
                android:layout_marginEnd="2dp"
                android:gravity="center"
                android:paddingStart="5dp"
                android:drawablePadding="-5dp"
                />

            <TextView
                android:id="@+id/btnFin"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/fin"
                android:textAlignment="center"
                android:background="@drawable/bk_line_grey_fill"
                android:textSize="20sp"
                android:gravity="center"
                android:paddingStart="5dp"
                android:drawablePadding="-5dp"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ListView
                android:id="@+id/listaPedidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:divider="@android:color/transparent"
                />
            <LinearLayout
                android:id="@+id/cont_no_pedidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_close"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_pedidos"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progress_pedidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
