<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="Dashboard"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        >
        <LinearLayout
            style="@style/rowItemDashboard"
            >
            <!-- PEDIDOS TOTALES -->
            <RelativeLayout
                style="@style/items_dashboard"
                >
                <TextView
                    android:id="@+id/titulo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pedidos_totales"
                    style="@style/textItemDashboard"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titulo1"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:id="@+id/imgIcono1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_gran_shop"
                        />
                    <TextView
                        android:id="@+id/textTotales"
                        style="@style/numberItemPedido"
                        />
                </LinearLayout>
            </RelativeLayout>

            <!-- PEDIDOS EN PROCESO -->
            <RelativeLayout
                style="@style/items_dashboard"
                >
                <TextView
                    android:id="@+id/titulo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pedidos_pendientes"
                    style="@style/textItemDashboard"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titulo2"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:id="@+id/imgIcono2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_gran_shoping"
                        />
                    <TextView
                        android:id="@+id/textPendientes"
                        style="@style/numberItemPedido"
                        />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/rowItemDashboard"
            >
            <!-- PEDIDOS TOTALES -->
            <RelativeLayout
                style="@style/items_dashboard"
                >
                <TextView
                    android:id="@+id/titulo3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_ventas"
                    style="@style/textItemDashboard"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titulo3"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:id="@+id/imgIcono3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_gran_chart"
                        />

                    <TextView
                        android:id="@+id/textVentas"
                        style="@style/numberItemPedido"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </RelativeLayout>

            <!-- PEDIDOS EN PROCESO -->
            <RelativeLayout
                style="@style/items_dashboard"
                >
                <TextView
                    android:id="@+id/titulo4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_ganancias"
                    style="@style/textItemDashboard"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titulo4"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:id="@+id/imgIcono4"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_gran_show"
                        />
                    <TextView
                        android:id="@+id/textGanancias"
                        style="@style/numberItemPedido"
                        />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/rowItemDashboard"
            >
            <!-- PEDIDOS TOTALES -->
            <RelativeLayout
                style="@style/items_dashboard"
                >
                <TextView
                    android:id="@+id/titulo5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clientes"
                    style="@style/textItemDashboard"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titulo5"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:id="@+id/imgIcono5"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_gran_person"
                        />
                    <TextView
                        android:id="@+id/textClientes"
                        style="@style/numberItemPedido"
                        />
                </LinearLayout>
            </RelativeLayout>

            <!-- PEDIDOS EN PROCESO -->
            <RelativeLayout
                style="@style/items_dashboard"
                >
                <TextView
                    android:id="@+id/titulo6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empleados"
                    style="@style/textItemDashboard"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titulo6"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:id="@+id/imgIcono6"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_gran_group"
                        />
                    <TextView
                        android:id="@+id/textEmpleados"
                        style="@style/numberItemPedido"
                        />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>